style.css
*, *::before, *::after {
    box-sizing: border-box;
}

:root {
    --ff-sans: 'Source Sans Pro', sans-serif;
    --ff-code: 'Source Code Pro', monospace;

    --fw-reg: 300;
    --fw-bold: 900;

    --clr-light: #fff;
    --clr-dark: rgb(0, 0, 0);
    --clr-accent: #47d4bd;

    --fs-h1: 4.5rem;
    --fs-h2: 3.75rem;
    --fs-h3: 1.5rem;
    --fs-body: 1.125rem;
}


body {
    background: var(--clr-light);
    color: var(--clr-dark);
    margin: 0;
    font-family: var(--ff-sans);
    font-size: var(--fs-body);
    line-height: 1.6;
}

img {
    display: block;
    max-width: 100%;
}

section {
    display: grid;
    place-items: center;
    align-content: center;
    min-height: 100vh;
}

/* fonts */

strong {
    font-weight: var(--fw-bold);
}

h1, h2, h3 {
    line-height: 1.1;
    margin: 0;
}

h1 {
    font-size: var(--fs-h1);
}

h2 {
    font-size: var(--fs-h2);
}

h3 {
    font-size: var(--fs-h3);
}

/* titles */

.section-title {
    margin-bottom: .25rem;
    font-weight: var(--fw-reg);
}

.section-title strong {
    display: block;
}

.section-subtitle {
    margin: 0;
    font-size: var(--fs-h3);
}

.section-subtitle_accented {
    background: var(--clr-accent);
    font-family: var(--ff-code);
}

/* navbar */

.navbar {
    background-color: var(--clr-dark);
    overflow: hidden;
    z-index: 1;
}

.navbar a {
    float: right;
    color: var(--clr-accent);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: var(--fs-body);
}

.navbar a:hover {
    background-color: var(--clr-dark);
}

.navbar a:active {
    text-decoration: underline;
}

.navbar .cv {
    float: left;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
}

.sticky + .content {
    padding-top: 57px;
}

/* intro section */

.intro .section-title {
    padding-bottom: 20px;
}

.intro .section-title, .intro .section-subtitle {
    color: var(--clr-accent);
}

.intro .section-title strong {
    color: var(--clr-dark);
}

.intro .section-subtitle_accented {
    color: var(--clr-dark)
}

/* skills section */

.skills p {
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
}

.skills-wrap {
    flex-direction: row;
}

.skill-container {
    font-size: var(--fs-h3);
    font-family: var(--ff-code);
    display: flex;
    justify-content: center;
    text-align: center;
    flex-direction: column;
    margin: 10px;
    float: right;
    background-color: var(--clr-accent);
    border-radius: 5px;
    height: 150px;
    width: 150px;
}

/* projects */

.projects {
    background: var(--clr-accent);
}

.slider {
    position: relative;
    width: 800px;
    height: 500px;
    border-radius: 10px;
    overflow: hidden;
}

.slides {
    width: 500%;
    height: 500px;
    display: flex;
}

.slides input {
    display: none;
}

.slide {
    position: relative;
    font-size: var(--fs-h3);
    background-color: var(--clr-light);
    font-weight: var(--fw-bold);
    width: 20%;
    transition: 2s;
    text-align: center;
}

.slide img {
    filter: blur(2px);

    position: absolute;
    object-fit: cover;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.slide-content {
    padding-top: 200px;
    z-index: 1;
    position: relative;
    color: var(--clr-light);
    background-color: rgba(0, 0, 0, 0.4);
}


.nav-manual {
    position: absolute;
    width: 800px;
    margin-top: -40px;
    display: flex;
    justify-content: center;
}

.manual-btn {
    border: 2px solid var(--clr-accent);
    padding: 5px;
    border-radius: 10px;
    cursor: pointer;
    transition: 1s;
}

.manual-btn:not(:last-child) {
    margin-right: 40px;
}

.manual-btn:hover {
    background: var(--clr-accent);
}

#radio1:checked ~ .first {
    margin-left: 0;
}

#radio2:checked ~ .first {
    margin-left: -20%;
}

#radio3:checked ~ .first {
    margin-left: -40%;
}

.arrow-wrapper {
    display: none;
    position: absolute;
    flex-direction: row;
    margin-bottom: -435px;
}

.arrow {
    display: flex;
    position: relative;
    float: left;
    width: 100px;
    justify-content: center;
    font-size: var(--fs-h3);
    background-color: var(--clr-accent);
    border: 3px solid var(--clr-dark);
    border-radius: 5px;
}

.projects p {
    font-family: var(--ff-sans);
    font-size: var(--fs-body);
}

.repo-link {
    font-size: var(--fs-body);
    font-weight: var(--fw-bold);
    color: var(--clr-accent);
    text-decoration: none;
}

.repo-link:hover {
    text-decoration: underline;
}

/* footer */

footer {
    background: #111;
    color: var(--clr-accent);
    text-align: center;
    padding: 2.5em 0;
}

footer a {
    color: inherit;
    text-decoration: none;
}

.social-link {
    font-size: var(--fs-h3);
    font-weight: var(--fw-bold);
}

.social-list {
    list-style: none;
    display: flex;
    justify-content: center;
    margin: 2em 0;
    padding: 0;
}

.social-item {
    margin: 0 .5em;
    font-size: var(--fs-h1);
}

.social-link:hover, .social-item:hover {
    opacity: .7;
}

/* hidden content */

.hidden {
    opacity: 0;
    filter: blur(5px);
    transform: translateX(-100%);
    transition: all 1s;
}

@media(prefers-reduced-motion) {
    .hidden {
        transition: none;
    }
}

.show {
    opacity: 1;
    filter: blur(0);
    transform: translateX(0);
}

/* media query */

@media (max-width: 800px) {
    :root { 
        --fs-h1: 3rem;
        --fs-h2: 2.25rem;
        --fs-h3: 1.25rem;
        --fs-body: 1rem;
    }

    .intro .section-title {
        font-size: var(--fs-h2);
    }

    .intro .section-subtitle {
        font-size: var(--fs-body);
    }

    .skill-container {
        margin: 2px;
        float: none;
        border-radius: 5px;
        height: 50px;

    }

    .skills li {
        font-size: var(--fs-body);
    }

    .navbar a {
        font-size: 15px;
        padding-left: 2px;
        padding-right: 2px;
    }

    .slider {
        width: 280px;
        height: 500px;
        border-radius: 10px;
        overflow: hidden;
    }
    
    .nav-manual {
        position: absolute;
        width: 280px;
        margin-top: -40px;
        display: flex;
        justify-content: center;
    }

    .arrow-wrapper {
        display: flex;
    }
}

